@@ -1,4 +1,5 @@
 0.42 (in development):
+	+ Ability to insert the page title with url on attach button click with modifier key
 	+ Using metaKey as a modifiers in OS X
 	* Geolocation getter is now limited for 5 seconds
 
